SubBt/force-app/main/default/objects/Group_Work_Log__c/Group_Work_Log__c.object-meta.xml
<CustomObject>
    <label>Group Work Log</label>
    <nameField>
        <label>Resource Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Group Work Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>