SubBt/force-app/main/default/objects/Group_Work_Log__c/fields/Total_Detailed_Man_Hours_Worked__c.field-meta.xml
<CustomField>
    <fullName>Total_Detailed_Man_Hours_Worked__c</fullName>
    <inlineHelpText>Rollup of all Resources on the job.</inlineHelpText>
    <label>Total Detailed Hours Worked</label>
    <summarizedField>Resource_Log_Details__c.Detailed_Man_Hours_Worked__c</summarizedField>
    <summaryForeignKey>Resource_Log_Details__c.Resource_Log__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>