SubBt/force-app/main/default/objects/Group_Work_Log__c/fields/Total_Hours_Worked__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours_Worked__c</fullName>
    <label>Total # of Hours</label>
    <summarizedField>Resource_Log_Details__c.Hours__c</summarizedField>
    <summaryForeignKey>Resource_Log_Details__c.Resource_Log__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>