SubBt/force-app/main/default/objects/Group_Work_Log__c/fields/Total_of_Workers__c.field-meta.xml
<CustomField>
    <fullName>Total_of_Workers__c</fullName>
    <label>Total # of Workers</label>
    <summarizedField>Resource_Log_Details__c.of_Workers__c</summarizedField>
    <summaryForeignKey>Resource_Log_Details__c.Resource_Log__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>